--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
         color: #ff69b4;
         animation: fall 3s linear infinite;
       }
-
       @keyframes fall {
         0% {
           top: -10%;
@@ -66,7 +65,6 @@
           opacity: 0;
         }
       }
-
       .background-area {
         position: absolute;
         top: 0;
@@ -123,15 +121,13 @@
         "https://i.pinimg.com/736x/05/88/8a/05888a4222f840152ff388a51d241571.jpg",
       ];
 
-      let clickCount = 0; // Счётчик кликов
       let img = document.getElementById("postcard");
       let btn = document.getElementById("toggleBtn");
       let video = document.getElementById("video");
       const backgroundArea = document.querySelector(".background-area");
 
-      let imageIndex = 0; // Индекс для картинок
-      let allImagesShown = false; // Флаг, который будет отслеживать, что все картинки показаны
-      let heartsArray = []; // Массив для хранения сердечек, чтобы повторно отображать их
+      let imageIndex = 0;
+      let isShowingImage = false;
 
       function createHearts() {
         for (let i = 0; i < 20; i++) {
@@ -139,47 +135,32 @@
           heart.classList.add("heart");
           heart.textContent = "💗";
           heart.style.left = `${Math.random() * 100}%`;
-          heart.style.animationDuration = `${Math.random() * 2 + 3}s`; // Рандомная продолжительность
+          heart.style.animationDuration = `${Math.random() * 2 + 3}s`;
           backgroundArea.appendChild(heart);
-          heartsArray.push(heart); // Сохраняем созданные сердечки в массив
         }
       }
 
+      createHearts();
+
       function toggleMedia() {
-        clickCount++; // Увеличиваем счётчик кликов
-
-        if (clickCount % 2 !== 0) {
-          // Если нечетное количество кликов, показываем картинку
+        if (!isShowingImage && imageIndex < images.length) {
           img.src = images[imageIndex];
-          img.style.display = "block"; // Показываем картинку
-          btn.textContent = "скрыть и показать еще"; // Изменяем текст кнопки при открытии картинки
+          img.style.display = "block";
+          btn.textContent = "скрыть и показать еще";
+          isShowingImage = true;
+        } else if (isShowingImage) {
+          img.style.display = "none";
+          btn.textContent = "тыкни";
+          isShowingImage = false;
+          imageIndex++;
 
-          // Создание сердечек, если их еще нет
-          if (heartsArray.length === 0) {
-            createHearts(); // Если сердечки еще не созданы, создаем их
-          } else {
-            // Если сердечки уже созданы, показываем их
-            heartsArray.forEach((heart) => (heart.style.display = "block"));
-          }
-
-          // Обновляем индекс для следующей картинки
-          imageIndex = (imageIndex + 1) % images.length;
-
-          // Если все картинки были показаны, показываем видео
-          if (imageIndex === 0 && !allImagesShown) {
-            allImagesShown = true;
+          if (imageIndex === images.length) {
+            btn.style.display = "none";
             setTimeout(() => {
-              video.style.display = "block"; // Показываем видео
-              video.play(); // Воспроизводим видео
-              btn.textContent = "конец!"; // Меняем текст кнопки на "конец!"
-              btn.style.display = "none"; // Скрываем кнопку после видео
-            }, 1000); // Задержка для плавного перехода
+              video.style.display = "block";
+              video.play();
+            }, 500);
           }
-        } else {
-          // Если чётное количество кликов, скрываем картинку
-          img.style.display = "none"; // Скрываем картинку
-          btn.textContent = "тыкни"; // Меняем текст кнопки обратно
-          // Сердечки продолжают падать, их не скрываем
         }
       }
     </script>
